--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Discord Bot token https://discord.com/developers/applications
-DISCORD_BOT_TOKEN=
+DISCORD_BOT_TOKEN="MTEwMTY5ODk4ODIwMzMzMTY2NQ.G8rSga.KDxh_piSwN694DeNGeQ1QBJ90Mm1aXXaAvmfSg"
 
 # Unofficial ChatGPT authentication (only Plus acoount) # https://chat.openai.com/api/auth/session
 UNOFFICIAL_PAID=True
@@ -9,7 +9,7 @@ OPENAI_EMAIL=
 OPENAI_PASSWORD=
 
 # Official GPT-3.5 authentication
-OPENAI_API_KEY=
+OPENAI_API_KEY= "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"
 
 # Bard session_id
 BARD_SESSION_ID=
